Fix triangle overlap

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -8,10 +8,10 @@
   box-sizing: border-box;
   content: " ";
   position: absolute;
-  top: 0;
+  bottom: 0;
   display: block;
   width: 50%;
-  height: 100%;
+  height: 20px;
   border: 20px solid transparent;
   border-bottom-color: #f9fafb;
 }
